...
    );
    response.fold((left) {
      _errorMessage.value = left.message;
      print(errorMessage);
      }, (right)  {
        _errorMessage.value =
         'E-mail de confirmação enviado. Verifique sua caixa de entrada';
        _isLoginMode.value = true;
        _clearFields();
      },
    );
  }

...
